<resources>
    <string name="app_name">Tailor</string>
    <string name="strEnterEmailId">Enter your Email Id</string>
    <string name="strEnterValidEmailId">Enter valid Email Id</string>
    <string name="strInternetNotAvaiable">Internet service is not available</string>
    <string name="strUnableToParseData">Unable to parse data</string>
    <string name="strServerNotResponding">Server not responding</string>
    <string name="strRequestTimeout">Request time out</string>
    <string name="strSessionExpire">Session has been expire</string>
    <string name="strInvalidUserNameAndPassword">Invalid username or password</string>
    <string name="strInvalidUserName">This email id is not registered with us!</string>
    <string name="strDatacannotReceive">Unable to receive data from network</string>
    <string name="strEmailIdAlreadyExists">Entered email is already registered with us.</string>
    <string name="strServerError">Server error</string>
    <string name="strClientError">Invalid URL request</string>
    <string name="msgPasswordReset">Password Reset Successfully.</string>
    <string name="strForgotPasswordQuestion">Forgot Password?</string>
    <string name="strEmailSent">Email has been sent!</string>
    <string name="strNoProblemItHappens">No Problem, It happens. \n\nEnter your email address below and we\'ll send new password.</string>
    <string name="strSendNewPassword">SEND NEW PASSWORD</string>
    <string name="msgEnterEmailNotExist">Entered email id is not exist, try again.</string>
    <string name="msgForgotPasswordEmailConfirmation">
  We have sent you an email with new password to your email, please follow instruction in the email to reset password.\n\n
  <u>A note about spam filter,</u>
  \nIf you do not get an email from us within a few minutes please be sure to check your spam filter.\nThe email will be coming from \"no-reply@jobio.io\"
  </string>
    <string name="strDone">Done</string>
    <string name="strPassword">Password</string>
    <string name="strLogin">Login</string>
    <string name="strForgotPassword">Forgot password?</string>
    <string name="strRegister">Register</string>
    <string name="strRegistration">Registration</string>
    <string name="strMeasurement">Measurement</string>
    <string name="strProfile">Profile</string>
    <string name="msgViewYourProfile">View your profile</string>
    <string name="msgEditProfile">Edit Profile</string>
    <string name="strSetting">Setting</string>
    <string name="strChangePassword">Change password</string>
    <string name="strLogout">Logout</string>
    <string name="strPersonalDetail">Personal Detail</string>
    <string name="strLoggingOut">Logging out</string>
    <string name="strNA">NA</string>
    <string name="strCancel">Cancel</string>
    <string name="strSave">Save</string>
    <string name="msgEnterFirstName">Enter first name</string>
    <string name="msgEnterLastName">Enter last name</string>
    <string name="msgEnterPassword">Enter password</string>
    <string name="strFirstName">First Name</string>
    <string name="strLastName">Last Name</string>
    <string name="strBirthDate">Birth date</string>
    <string name="strMobileNumber">Mobile Number</string>
    <string name="strGender">Gender</string>
    <string name="strMale">Male</string>
    <string name="strFemale">Female</string>
    <string name="msgSelectBirthDate">Select your birth date.</string>
    <string name="msgEnterMobileNumber">Enter mobile number</string>
    <string name="msgPasswordSend">Registration done. Password has been sent to your email address.</string>
    <string name="strEnterOldPassword">Enter old password</string>
    <string name="strEnterNewPassword">Enter new password</string>
    <string name="msgInvalidOldPassword">Invalid old password</string>
    <string name="msgLogoutConfirmation">Are you sure you want to logout?</string>
    <string name="msgEnterConfirmPassword">Confirm your password</string>
    <string name="msgPasswordConfirmShouldSame">Password and confirm password should same.</string>
    <string name="strName">Name</string>
    <string name="strEmailId">Email Id</string>
    <string name="strUserType">User type</string>
    <string name="strConfirmPassword">Confirm Password</string>
    <string name="strSchoolAndCLass">School &amp; Class</string>
    <string name="strSchoolName">School name</string>
    <string name="strRollNumber">Roll number</string>
    <string name="msgEnterRollNumber">Enter roll number</string>
    <string name="msgSelectCategory">Select category</string>
    <string name="strCategory">Category</string>
    <string name="msgClass">Enter class</string>
    <string name="strAgeGroup">Age group</string>
    <string name="msgSelectAgeGroup">Select age group</string>
    <string name="msgSelectSchoolName">Select school name</string>
    <string name="msgSelectClassName">Select class name</string>
    <string name="strClass">Class</string>
    <string name="strNext">Next</string>
    <string name="strAddStudent">Add Student</string>
    <string name="strCalculateSize">Calculate size</string>
    <string name="strCalculatingSize">Calculating size</string>
    <string name="strSizeResult">Size result</string>
    <string name="strStudentFirstName">Student first name</string>
    <string name="strStudentLastName">Student last name</string>
    <string name="strSubmit">Submit</string>
    <string name="strSubmitting">Submitting</string>
    <string name="strNoSizeFound">No relevant size found.</string>
    <string name="strSize">Size</string>
    <string name="msgMeasurementDataSave">Measurement data saved on server.</string>
    <string name="strTryAgain">TRY AGAIN</string>
    <string name="strSent">SENT</string>
    <string name="strFailed">FAILED</string>
    <string name="strShowDetail">Show Detail</string>
    <string name="strHideDetail">Hide Detail</string>
</resources>
