<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:rdv="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/red"
        android:padding="@dimen/paddingBig">

        <TextView
            style="@style/styTitleWhiteSingleLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/strForgotPasswordQuestion"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@color/transparent"
            android:src="@drawable/ic_close_white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/lyInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/paddingBig"
        android:visibility="gone">

        <TextView
            android:id="@+id/msgError"
            style="@style/stySmallRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin"
            android:visibility="gone" />

        <TextView
            style="@style/styDescBlackMultiLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/strNoProblemItHappens" />

        <me.zhanghai.android.materialedittext.MaterialTextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin">

            <me.zhanghai.android.materialedittext.MaterialEditText
                android:id="@+id/edUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/strEnterEmailId"
                android:inputType="textEmailAddress" />
        </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.github.silvestrpredko.dotprogressbar.DotProgressBar
                android:id="@+id/dot_progress_bar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dorProgressBarheight"
                android:visibility="gone"
                custom:amount="5"
                custom:duration="@android:integer/config_mediumAnimTime"
                custom:endColor="@color/red"
                custom:startColor="@color/red" />
        </LinearLayout>


        <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/marginBig"
            android:gravity="right"
            rdv:rdv_rippleAnimationDuration="600"
            rdv:rdv_rippleAnimationFrames="60"
            rdv:rdv_rippleAnimationPeakFrame="15"
            rdv:rdv_rippleColor="@android:color/white"
            rdv:rdv_rippleMaxAlpha="0.8"
            rdv:rdv_rippleRadius="@dimen/rippleRadius">

            <Button
                android:id="@+id/btnSendNewPassword"
                style="@style/btnRed"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonHeight"
                android:padding="@dimen/padding"
                android:text="@string/strSendNewPassword" />
        </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lyConfirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/paddingBig"
        android:visibility="gone">

        <TextView
            style="@style/stySubTitleBlackSingleLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/strEmailSent"
            android:textStyle="bold" />

        <TextView
            style="@style/stySmallBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/msgForgotPasswordEmailConfirmation" />

        <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin"
            android:gravity="right"
            rdv:rdv_rippleAnimationDuration="600"
            rdv:rdv_rippleAnimationFrames="60"
            rdv:rdv_rippleAnimationPeakFrame="15"
            rdv:rdv_rippleColor="@android:color/white"
            rdv:rdv_rippleMaxAlpha="0.8"
            rdv:rdv_rippleRadius="@dimen/rippleRadius">

            <Button
                android:id="@+id/btnDone"
                style="@style/btnRed"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/buttonHeight"
                android:padding="@dimen/padding"
                android:text="@string/strDone" />
        </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
    </LinearLayout>
</LinearLayout>
