<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:rdv="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/my_toolbar" />

    <RelativeLayout
        android:id="@+id/rlDotProgress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <com.github.silvestrpredko.dotprogressbar.DotProgressBar
            android:id="@+id/dot_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dorProgressBarheight"
            android:layout_centerInParent="true"
            custom:amount="5"
            custom:duration="@android:integer/config_mediumAnimTime"
            custom:endColor="@color/red"
            custom:startColor="@color/red" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlMainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="@dimen/padding">

        <LinearLayout
            android:id="@+id/lyBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin"
            android:orientation="horizontal">

            <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginRight="@dimen/margin"
                android:layout_weight="1"
                rdv:rdv_rippleAnimationDuration="600"
                rdv:rdv_rippleAnimationFrames="60"
                rdv:rdv_rippleAnimationPeakFrame="15"
                rdv:rdv_rippleColor="@color/white"
                rdv:rdv_rippleMaxAlpha="0.8"
                rdv:rdv_rippleRadius="@dimen/rippleRadius">

                <Button
                    android:id="@+id/btnCancel"
                    style="@style/btnRed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonHeight"
                    android:text="@string/strCancel" />
            </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>

            <com.thomsonreuters.rippledecoratorview.RippleDecoratorView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                rdv:rdv_rippleAnimationDuration="600"
                rdv:rdv_rippleAnimationFrames="60"
                rdv:rdv_rippleAnimationPeakFrame="15"
                rdv:rdv_rippleColor="@color/white"
                rdv:rdv_rippleMaxAlpha="0.8"
                rdv:rdv_rippleRadius="@dimen/rippleRadius">

                <Button
                    android:id="@+id/btnSave"
                    style="@style/btnRed"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/buttonHeight"
                    android:text="@string/strSave" />
            </com.thomsonreuters.rippledecoratorview.RippleDecoratorView>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/lyBottom"
            android:layout_marginBottom="@dimen/margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <me.zhanghai.android.materialedittext.MaterialEditText
                        android:id="@+id/edFirstName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/strFirstName"
                        android:inputType="text"
                        android:maxLength="50" />
                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <me.zhanghai.android.materialedittext.MaterialEditText
                        android:id="@+id/edLastName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/strLastName"
                        android:inputType="text"
                        android:maxLength="50" />
                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin">

                    <me.zhanghai.android.materialedittext.MaterialEditText
                        android:id="@+id/edEmailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/strEnterEmailId"
                        android:inputType="textEmailAddress" />
                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin">

                    <me.zhanghai.android.materialedittext.MaterialEditText
                        android:id="@+id/edMobileNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/strMobileNumber"
                        android:inputType="phone"
                        android:maxLength="13" />
                </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                <TextView
                    style="@style/stySubTitleBlackSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strGender" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rdMale"
                        style="@style/stySmallBlack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/strMale" />

                    <RadioButton
                        android:id="@+id/rdFemale"
                        style="@style/stySmallBlack"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/strFemale" />
                </RadioGroup>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin">

                    <me.zhanghai.android.materialedittext.MaterialTextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <me.zhanghai.android.materialedittext.MaterialEditText
                            android:id="@+id/edBirthDate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:hint="@string/strBirthDate"
                            android:inputType="text"
                            android:maxLength="50" />
                    </me.zhanghai.android.materialedittext.MaterialTextInputLayout>

                    <Button
                        android:id="@+id/btnPickDate"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:background="@drawable/ic_calender" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>

