<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/my_toolbar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <include layout="@layout/bottom_menu" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/tab">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/paddingBig">

                <TextView
                    style="@style/stySubTitleRedSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strPersonalDetail" />

                <TextView
                    style="@style/stySubTitleBlackSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strName" />

                <TextView
                    android:id="@+id/txtName"
                    style="@style/styDescGreySingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@color/red" />

                <TextView
                    style="@style/stySubTitleBlackSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strEmailId" />

                <TextView
                    android:id="@+id/txtEmailId"
                    style="@style/styDescGreySingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@color/red" />

                <TextView
                    style="@style/stySubTitleBlackSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strMobileNumber" />

                <TextView
                    android:id="@+id/txtMobileNumber"
                    style="@style/styDescGreySingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@color/red" />

                <TextView
                    style="@style/stySubTitleBlackSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strGender" />

                <TextView
                    android:id="@+id/txtGender"
                    style="@style/styDescGreySingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@color/red" />

                <TextView
                    style="@style/stySubTitleBlackSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strBirthDate" />

                <TextView
                    android:id="@+id/txtBirthDate"
                    style="@style/styDescGreySingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/margin"
                    android:background="@color/red" />

                <TextView
                    style="@style/stySubTitleBlackSingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin"
                    android:text="@string/strUserType" />

                <TextView
                    android:id="@+id/txtUserType"
                    style="@style/styDescGreySingleLine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>
